# ChatBotRemember

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 45c15c0fa42d_initial.py
app/: conf.py  run.py
app/api/: create_app.py  repository.py  router.py
app/bot/: add_habit_handlers.py  add_list_habits_handlers.py  api_client.py  bot_instance.py  bot_main.py  create_bot.py  exceptions_handlers.py  keyboards.py  messages.py  reminder_handlers.py  states.py  trackings_handlers.py  update_habit_handlers.py  utils.py
app/models/: db_bot_models.py  db_models.py  shemas.py
app/services/: loging.py  scheduler.py  security.py
app/utils/: utils.py
database/: database.py
